[tool.poetry]
name = "svelte4django"
version = "0.1.0"
description = "Django + Svelte + Vite + Tailwindcss"
authors = ["Pei2tech <peitai2tech@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
